# learn-opengl

./: .gitignore  CMakeLists.txt  README.md
shaders/: fragment.glsl  lightingFragment.glsl  lightingVertex.glsl  vertex.glsl
src/: camera.hpp  lighting.cpp  main.cpp  shader.hpp  starting.cpp
